# niriss-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements-20260114.txt  setup.py
catalogue_paper/: default_imports.py  mag_z_scatter  mag_z_scatter.py  mag_z_scatter_side_hist.py  magnitude_distribution.py  plot_utils.py  sample_sky_plot.py  wavelength_coverage  wavelength_coverage.py  z_hist.py  z_niriss_vs_z_spec copy.py  z_niriss_vs_z_spec.py
docs/: conf.py  index.rst
docs/api/: glass_niriss.c_utils.assign_hex.rst  glass_niriss.c_utils.build_ellipse_model.rst  glass_niriss.c_utils.calc_chisq.rst  glass_niriss.grism.BagpipesSampler.rst  glass_niriss.grism.CDNNLS.rst  glass_niriss.grism.ExtendedModelGalaxy.rst  glass_niriss.grism.RegionsMultiBeam.rst  glass_niriss.grism.check_coverage.rst  glass_niriss.isophotal.ClusterModels.rst  glass_niriss.isophotal.calc_full_var.rst  glass_niriss.isophotal.gen_new_wcs.rst  glass_niriss.isophotal.match_photutils.rst  glass_niriss.isophotal.match_pypher.rst  glass_niriss.isophotal.pad_wcs.rst  glass_niriss.isophotal.pc_to_cd.rst  glass_niriss.isophotal.reproject_and_convolve.rst  glass_niriss.isophotal.reproject_image.rst  glass_niriss.sed.AtlasFitter.rst  glass_niriss.sed.AtlasGenerator.rst  glass_niriss.sed.bin_and_save.rst  glass_niriss.sed.constrained_adaptive.rst  glass_niriss.sed.hexbin.rst  glass_niriss.sed.save_binned_data_arr.rst  glass_niriss.sed.save_binned_data_fits.rst  niriss_tools.c_utils.build_ellipse_model.rst  niriss_tools.c_utils.calc_chisq.rst  niriss_tools.grism.BagpipesSampler.rst  niriss_tools.grism.CDNNLS.rst  niriss_tools.grism.ExtendedModelGalaxy.rst  niriss_tools.grism.MultiRegionFit.rst  niriss_tools.grism.align_direct_images.rst  niriss_tools.grism.check_coverage.rst  niriss_tools.grism.gen_stacked_beams.rst  niriss_tools.isophotal.ClusterModels.rst  niriss_tools.isophotal.calc_full_var.rst  niriss_tools.isophotal.gen_new_wcs.rst  niriss_tools.isophotal.match_photutils.rst  niriss_tools.isophotal.match_pypher.rst  niriss_tools.isophotal.pad_wcs.rst  niriss_tools.isophotal.pc_to_cd.rst  (+26 more)
docs/c_utils/: index.rst  ref_api.rst
docs/grism/: index.rst  ref_api.rst
docs/isophotal/: index.rst  ref_api.rst
docs/pipeline/: index.rst  ref_api.rst
docs/sed/: index.rst  ref_api.rst
example_notebooks/: 1-Preprocessing_from_raw_data_aws.ipynb  1.5-Generating_contamination_model copy.ipynb  2-Generating_contamination_model.ipynb  2-Working_with_ancillary_data.ipynb  3-Working_with_ancillary_data.ipynb  4-Spatially-resolved_SED_fitting.ipynb  4-bCG_modelling.ipynb  5-Multiregion_grism_fitting copy.ipynb  5-Multiregion_grism_fitting.ipynb  6-GeneralExtractions.ipynb  7-VisualisationClassification.ipynb  7-VisualisationClassification_recombine copy.ipynb  7-VisualisationClassification_recombine.ipynb  7-VisualisationClassification_stage_3.ipynb  7-VisualisationClassification_stage_4.ipynb  7-VisualisationClassification_stage_4_fix.ipynb  7-VisualisationClassification_stage_5.ipynb  7-VisualisationClassification_stage_6.ipynb  7-VisualisationClassification_stage_7.ipynb  7-VisualisationClassification_v3.ipynb  catalogue_fns.py  run_multi.py  run_pygcg.py  separate_objects.py  test.py
example_notebooks/hires_psf/: 3-Working_with_ancillary_data.ipynb  5-Multiregion_grism_fitting.ipynb
examples/: 1_reduction_workflow__GLASS.py  1_reduction_workflow__PASSAGE.py  1b_reduction_workflow__GLASS_ICL.py  2_direct_imaging.py  3_running_multiregion_WIP.py  3_running_multiregion_fit.py  GLASS_workflow.py  PASSAGE_workflow.py  example_config.toml
plotting/catalogue_paper/: BPT_all.py  absorption_bands.py  beam_quality_by_filter.py  beam_quality_examples.py  catalogue_merging copy.py  catalogue_merging.py  catalogue_merging_position_only.py  catalogues_for_claudio.py  cluster_gals_BV.py  default_imports.py  dz_1pz copy.py  dz_1pz.py  example_plot.py  full_z_hist.py  initial_stage_objects.py  mag_z_scatter_side_hist.py  mag_z_scatter_side_hist_v4.py  magnitude_distribution.py  multiple_images_cutouts.py  niriss_beams_example.py  nirspec_comparison.py  overdensities_cutouts.py  overdensities_cutouts_for_Matt.py  overdensities_sky_plot.py  overdensities_sky_plot_3d.py  overdensities_source_plane.py  overdensities_source_plane_old.py  plot_utils.py  pointings.py  redshift_offset_sky_plot.py  redshift_quality_examples.py  voronoi_binning_fun.py  (+4 more)
(+113 files in other folders)
