[build-system]
requires = ["setuptools>=61.0","numpy>=2", "setuptools_scm>=8.0","Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niriss-tools"
dynamic = ["version"]
authors = [
  { name="Peter J. Watson", email="peter.watson+NT@inaf.it" },
]
description = "A set of tools for processing JWST NIRISS/WFSS data."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=6.1",
    "numpy>=1.26.4",
    "matplotlib>=3.9",
    "tqdm>=4.67",
    "scipy>=1.13",
    "Cython>=3",
    "vorbin",
    "reproject>=0.14",
    # One day I hope this dependency hell with drizzlepac can be resolved
    # "photutils@git+https://github.com/astropy/photutils@1.12.0",
    "shapely>=2.0.4",
    "bagpipes-extended@git+https://github.com/PJ-Watson/bagpipes-extended",
    "grizli[jwst,aws]@git+https://github.com/PJ-Watson/grizli@new_workflow",
    "bottleneck"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8"
]
docs = [
    "sphinx-copybutton>=0.5",
    "sphinx>=8.0",
    "numpydoc>=1.8",
    "sphinx-astropy>=1.9.1",
    "pydata-sphinx-theme>=0.16.1"
]

[project.urls]
"Homepage" = "https://github.com/PJ-Watson/niriss-tools"
"Bug Tracker" = "https://github.com/PJ-Watson/niriss-tools/issues"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = '(.*.txt|.*.md|.*.toml|.*.odg)'
preview = true

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "RT01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\._.*$',  # Ignore anything that's private (e.g., starts with _)
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.setuptools_scm]
version_file = "src/niriss_tools/_version.py"
